[metadata]
name = asyncratelimiter
version = 1.0.0
author = Kiruse
author_email = kiruse@kiruse.dev
description = "AsyncIO-enabled rate limiter - limit the rate of API calls!"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kiruse/PyAsyncRateLimiter
license = MIT
license_file = LICENSE
keywords = asyncio, rate limiter, requests

[options]
packages = asyncratelimit
python_requires = >=3.6
install_requires=
    requests >= 2.0
extras_require=
    test = pytest
